--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -6,6 +6,15 @@
              Flutter draws its first frame -->
         <item name="android:windowBackground">@drawable/launch_background</item>
     </style>
+
+    <style name="TransparentProgressTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <!-- Make activity window translucent -->
+        <item name="android:windowIsTranslucent">true</item>
+        <!-- Remove default window background (white) -->
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <!-- Optional: prevent automatic dimming behind -->
+        <item name="android:backgroundDimEnabled">false</item>
+    </style>
     <!-- Theme applied to the Android Window as soon as the process has started.
          This theme determines the color of the Android Window while your
          Flutter UI initializes, as well as behind your Flutter UI while its
